Fix icons jumping

--- a/src/components/flex-settings-control/editor.scss
+++ b/src/components/flex-settings-control/editor.scss
@@ -4,15 +4,33 @@
             &:not(:first-child){
                 .maxi-tabs-control__button{
                     padding: 6px 3px;
+                    border-bottom: 1px solid var(--maxi-grey-1-color);
                     &:first-child{
                         max-width: 30px;
                     }
                     svg{
                         width: 18px;
+                        height: 18px;
                     }
-                    &--selected svg {
-                        path {
-                            fill: var(--maxi-secondary-color);
+                    &::after{
+                        content: "";
+                        display: block;
+                        background-color: var(--maxi-secondary-color);
+                        height: 2px;
+                        position: absolute;
+                        bottom: -1px;
+                        left: -1px;
+                        right: -1px;
+                        opacity: 0;
+                    }
+                    &--selected {
+                        &::after{
+                            opacity: 1;
+                        }
+                        svg {
+                            path {
+                                fill: var(--maxi-secondary-color);
+                            }
                         }
                     }
                 }
